# fui

./: README.md
client/: .flutter-plugins  .flutter-plugins-dependencies  pubspec.yaml
client/.dart_tool/: package_config.json  package_config_subset
client/.dart_tool/dartpad/: web_plugin_registrant.dart
client/.dart_tool/extension_discovery/: vs_code.json
client/android/: local.properties
client/android/app/: build.gradle
client/android/app/src/debug/: AndroidManifest.xml
client/android/app/src/main/: AndroidManifest.xml
client/integration_test/: app_test.dart
client/ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
client/ios/Runner/: GeneratedPluginRegistrant.m  Info.plist
client/ios/Runner.xcodeproj/: project.pbxproj
client/ios/fastlane/: Appfile  Fastfile  Matchfile
client/lib/: main.dart
client/linux/: CMakeLists.txt  my_application.cc
client/linux/flutter/: generated_plugins.cmake
client/macos/Flutter/: GeneratedPluginRegistrant.swift
client/macos/Flutter/ephemeral/: Flutter-Generated.xcconfig  flutter_export_environment.sh
client/macos/Runner.xcodeproj/: project.pbxproj
client/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
client/macos/Runner/Configs/: AppInfo.xcconfig
client/web/: index.html  manifest.json  python-worker.js
client/windows/: CMakeLists.txt
client/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
client/windows/runner/: Runner.rc  main.cpp
sdk/python/: pyproject.toml
sdk/python/playground/: main.py
(+2 files in other folders)
