[tool.poetry]
name = "fui-project"
version = "1.0.0"
description = ""
authors = ["Appveyor Systems Inc. <hello@fui.dev>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "<3.14,>=3.8"

[tool.poetry.group.dev.dependencies]
fui-cli = {path = "packages/fui-cli", develop = true}
fui-desktop = {path = "packages/fui-desktop", develop = true}
fui-web = {path = "packages/fui-web", develop = true}
fui = {path = "packages/fui", develop = true}
pytest = "^7.2.0"
black = "^22.12.0"
tomlkit = "^0.11.6"
cryptography = "^39.0.0"
pyinstaller = "^6.6.0"
pillow = "^10.3.0"
pre-commit = "^2.21.0"
hypercorn = "^0.14.4"
gunicorn = "^21.2.0"
pypi-cleanup = "0.1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
